# seshat

./: CMakeLists.txt  featureson.cc  featureson.h  gmm.cc  online.cc  online.h  sample.cc  symrec.cc
rnnlib4seshat/: ClassificationLayer.hpp  Helpers.h  Helpers.hpp  Layer.hpp  Matrix.hpp  Mdrnn.hpp  NeuronLayer.hpp  SoftmaxLayer.hpp  TranscriptionLayer.hpp  WeightContainer.hpp
